[gd_scene load_steps=7 format=2]

[ext_resource path="res://minigames/SingingTile.gd" type="Script" id=1]
[ext_resource path="res://sfx/avatar.wav" type="AudioStream" id=2]
[ext_resource path="res://fonts/Chewy-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://objects/SingTile.tscn" type="PackedScene" id=4]
[ext_resource path="res://sfx/bgm/technoandino160.ogg" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=1]
size = 120
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 3 )

[node name="SingingTile" type="Node2D"]
light_mask = 2
script = ExtResource( 1 )

[node name="Song" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )

[node name="SingPrompt" type="Label" parent="."]
margin_left = 660.0
margin_top = 720.0
margin_right = 1410.0
margin_bottom = 875.0
custom_fonts/font = SubResource( 1 )
text = "Â¡HABLA!"
align = 1

[node name="TileContainer" type="Node2D" parent="."]
light_mask = 2
position = Vector2( 1020, 440 )
rotation = -0.0439248

[node name="SingTile" parent="TileContainer" instance=ExtResource( 4 )]
light_mask = 2
position = Vector2( -850.388, -237.57 )
scale = Vector2( 0.7, 0.7 )

[node name="SingTile2" parent="TileContainer" instance=ExtResource( 4 )]
light_mask = 2
position = Vector2( -438.149, -279.509 )
index = 1

[node name="SingTile3" parent="TileContainer" instance=ExtResource( 4 )]
light_mask = 2
position = Vector2( 182.461, -52.0382 )
scale = Vector2( 0.6, 0.6 )
index = 2

[node name="SingTile4" parent="TileContainer" instance=ExtResource( 4 )]
light_mask = 2
position = Vector2( 532.233, -266.887 )
scale = Vector2( 0.9, 0.9 )
index = 3

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0
autoplay = true
[connection signal="pressed" from="TileContainer/SingTile" to="." method="_on_SingTile_pressed"]
[connection signal="pressed" from="TileContainer/SingTile2" to="." method="_on_SingTile2_pressed"]
[connection signal="pressed" from="TileContainer/SingTile3" to="." method="_on_SingTile3_pressed"]
[connection signal="pressed" from="TileContainer/SingTile4" to="." method="_on_SingTile4_pressed"]
